logo alignments fixed

--- a/sandeep_portfolio/static/assets/css/custom.css
+++ b/sandeep_portfolio/static/assets/css/custom.css
@@ -179,7 +179,7 @@ h1.vlt-large-heading {
     padding: 0% 5% 1.5%;
 }
 .vlt-footer-copyright {
-    font-size: 1rem;
+    font-size: 0.9rem;
     pointer-events: auto
 }
 
@@ -325,8 +325,22 @@ h1.vlt-large-heading {
         line-height: 1.3;
         color: #fff;
     }
-
+    .vlt-navbar .vlt-navbar-logo img {
+        display: block;
+        height: 3rem;
+        position: absolute;
+        left: 2.5%;
+        top: 10%;
+    }
+    .vlt-partners li img {
+        max-width: 70% !important;
+    }
+    .vlt-footer-copyright {
+        font-size: 0.8rem;
+        pointer-events: auto;
+    }
 }
+
 
 .mb-2{
     font-size: 1rem !important;
